image overlapping issue in modal is resolved,absent field is visible in employee attendance page,image on employee attendance details screen in not editable,joining date issue is resolved in account page

--- a/src/screens/Admin/Leads/LeadsAdmin.css
+++ b/src/screens/Admin/Leads/LeadsAdmin.css
@@ -107,7 +107,7 @@ select.form-control.form-control-sm {
 }
 .zoom {
  
-  background-color: green;
+  /* background-color: green; */
   transition: transform .2s;
  
   margin: 0 auto;
